# element-community

./: .gitignore  Trunk.toml  wrangler.jsonc
.claude/: launch.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  community.rs  main.rs
frontend/src/components/: book_card.rs  class_card.rs  cta_button.rs  event_card.rs  footer.rs  hero.rs  mod.rs  nav.rs  pricing_card.rs  scroll_to_top.rs  section.rs  team_card.rs  timeline.rs
frontend/src/pages/: about.rs  book_club.rs  classes.rs  events.rs  home.rs  mod.rs  pricing.rs  run_club.rs  schedule.rs  team.rs  team_bio.rs  tv.rs
